[^] 数据服务：优化鉴权服务

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="/dist/appcache/manifest.appcache">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Ciel’s Lab</title>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <link rel="stylesheet" href="https://cdn.bootcss.com/normalize/7.0.0/normalize.min.css">
   <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
-<link href="/dist/common.611af105b4b89958b5e6.css" rel="stylesheet"></head>
+<link href="/dist/common.689bd25067c313d7ece2.css" rel="stylesheet"></head>
 
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="/dist/build.5486.js"></script></body>
+<script type="text/javascript" src="/dist/build.2fb5.js"></script></body>
 
 </html>
