[^] 前端：修正资源cdn地址错误

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <link rel="stylesheet" href="https://cdn.bootcss.com/normalize/7.0.0/normalize.min.css">
   <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
-<link href="/dist/common.689bd25067c313d7ece2.css" rel="stylesheet"></head>
+  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+<link href="/dist/common.0e615ee45b99259acfba.css" rel="stylesheet"></head>
 
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="/dist/build.2fb5.js"></script></body>
+<script type="text/javascript" src="/dist/build.5e30.js"></script></body>
 
 </html>
