--- a/fe/index.html
+++ b/fe/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ciel’s Lab</title>
+  <link rel="shortcut icon" href="/src/assets/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 
